--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -7,51 +7,55 @@
 	<p:tab id="tabAttachs" title="#{msgs.attachments_Tab}">
 
 
-	
-
-			<p:growl id="messages" showDetail="true" />
-
-			<h:outputText value="Allegati caricati: " />
-
-			<p:dataTable id="attchsList" value="#{attachmentsPB.attachments}"
-				var="file">
-				<p:column>
-					<p:commandLink id="downloadLink" ajax="false"
-						value="#{file.fileName}, #{file.fileType}">
-						<p:fileDownload value="#{attachmentsPB.getFile(file)}" />
-					</p:commandLink>
-				</p:column>
-				<p:column>
-					<p:commandButton id="downloadButton" value="Download" ajax="false"
-						icon="ui-icon-arrowthichk-s">
-						<p:fileDownload value="#{attachmentsPB.getFile(file)}" />
-					</p:commandButton>
-					<p:commandButton id="removeButton" value="remove" ajax="true"
-						oncomplete="w_confirm.show();">
-						<f:setPropertyActionListener
-							target="#{attachmentsPB.selectedAttachment}" value="#{file}">
-						</f:setPropertyActionListener>
-					</p:commandButton>
-				</p:column>
-			</p:dataTable>
-
-			<p:fileUpload auto="false"
-				fileUploadListener="#{attachmentsPB.handleFileUpload}"
-				mode="advanced" dragDropSupport="true" update="messages attchsList"
-				sizeLimit="1000000" />
 
 
+		<p:growl id="messages" showDetail="true" />
 
-			<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}"
-				severity="alert" widgetVar="w_confirm">
-				<p:commandButton value="#{msgs.yes}"
-					action="#{attachmentsPB.removeFile()}" immediate="true"
-					oncomplete="w_confirm.hide()" update="attchsList" />
-				<p:commandButton value="#{msgs.no}" onclick="w_confirm.hide();"
-					type="button" />
-			</p:confirmDialog>
+		<h:outputText value="Allegati caricati: " />
 
-	
+		<p:dataTable id="attchsList" value="#{attachmentsPB.attachments}"
+			var="file">
+			<p:column>
+				<p:commandLink id="downloadLink" ajax="false"
+					value="#{file.fileName}, #{file.fileType}">
+					<p:fileDownload value="#{attachmentsPB.getFile(file)}" />
+				</p:commandLink>
+			</p:column>
+			<p:column>
+				<p:commandButton id="downloadButton"  ajax="false"
+					icon="ui-icon-arrowthichk-s">
+					<p:fileDownload value="#{attachmentsPB.getFile(file)}" />
+				</p:commandButton>
+				<p:tooltip for="downloadButton" value="Download"
+					showEffect="fade" hideEffect="fade" />
+				<p:commandButton id="removeButton" ajax="true"
+					oncomplete="w_confirm.show();" icon="ui-icon-trash">
+					<f:setPropertyActionListener
+						target="#{attachmentsPB.selectedAttachment}" value="#{file}">
+					</f:setPropertyActionListener>
+				</p:commandButton>
+				<p:tooltip for="removeButton" value="#{msgs.remove}"
+					showEffect="fade" hideEffect="fade" />
+			</p:column>
+		</p:dataTable>
+
+		<p:fileUpload auto="false"
+			fileUploadListener="#{attachmentsPB.handleFileUpload}"
+			mode="advanced" dragDropSupport="true" update="messages attchsList"
+			sizeLimit="1000000" />
+
+
+
+		<p:confirmDialog message="#{msgs.sure}" header="#{msgs.cancel}"
+			severity="alert" widgetVar="w_confirm">
+			<p:commandButton value="#{msgs.yes}"
+				action="#{attachmentsPB.removeFile()}" immediate="true"
+				oncomplete="w_confirm.hide()" update="attchsList" />
+			<p:commandButton value="#{msgs.no}" onclick="w_confirm.hide();"
+				type="button" />
+		</p:confirmDialog>
+
+
 
 
 	</p:tab>
