--- a/Jama/src/main/webapp/resources/dialogs/chiefDialog.xhtml
+++ b/Jama/src/main/webapp/resources/dialogs/chiefDialog.xhtml
@@ -1,9 +1,5 @@
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:p="http://primefaces.org/ui"
-	xmlns:composite="http://java.sun.com/jsf/composite">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core" xmlns:p="http://primefaces.org/ui" xmlns:composite="http://java.sun.com/jsf/composite">
 
 <composite:interface>
 	<composite:attribute name="name"></composite:attribute>
@@ -12,33 +8,25 @@
 
 <composite:implementation>
 
-	<p:dialog id="chiefDialog" header="#{msgs.newChiefTitle}"
-		widgetVar="#{cc.attrs.name}" modal="true">
+	<p:dialog id="chiefDialog" header="#{msgs.newChiefTitle}" widgetVar="#{cc.attrs.name}" modal="true">
 		<h:form>
 
-			<h:panelGrid id="chiefPanel" columns="3"
-				columnClasses="label, value, errorMessage" styleClass="grid">
+			<h:panelGrid id="chiefPanel" columns="3" columnClasses="label, value, errorMessage" styleClass="grid">
 
 				<h:outputText value="#{msgs.name}:" />
-				<h:inputText id="chiefName" value="#{chiefDialogPCB.chief.name}"
-					label="#{msgs.name}" required="true" />
-				<h:message for="chiefName" />
+				<h:inputText id="chiefFirstName" value="#{chiefDialogPCB.chief.name}" label="#{msgs.name}" required="true" />
+				<h:message for="chiefFirstName" />
 
 				<h:outputText value="#{msgs.surname}:" />
-				<h:inputText id="chiefSurname"
-					value="#{chiefDialogPCB.chief.surname}" label="#{msgs.surname}"
-					required="true" />
-				<h:message for="chiefSurname" />
+				<h:inputText id="chiefLastName" value="#{chiefDialogPCB.chief.surname}" label="#{msgs.surname}" required="true" />
+				<h:message for="chiefLastName" />
 
 				<br />
 
 			</h:panelGrid>
 
-			<p:commandButton type="button" onclick="w_chiefDialog.hide();"
-				value="#{msgs.cancel}" />
-			<p:commandButton value="#{msgs.save}"
-				actionListener="#{chiefDialogPCB.save()}"
-				update=":#{p:component('chiefMenu')}"
+			<p:commandButton type="button" onclick="w_chiefDialog.hide();" value="#{msgs.cancel}" />
+			<p:commandButton value="#{msgs.save}" actionListener="#{chiefDialogPCB.save()}" update=":#{p:component('chiefMenu')}"
 				oncomplete="if (!args.validationFailed) w_chiefDialog.hide()" />
 
 		</h:form>
