--- a/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
@@ -11,7 +11,7 @@
 
 	<p:panel header="Tabella di ripartizione">
 
-		<h:panelGrid columns="4" columnClasses="label, value, percents, errorMessage" styleClass="grid">
+		<h:panelGrid id="agrValuesGrid" columns="4" columnClasses="label, value, percents, errorMessage" styleClass="grid">
 
 			<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
 			<h:outputText id="atheneumCapitalBalance" value="#{agrShareTablePB.atheneumCapitalBalance}">
@@ -40,7 +40,7 @@
 			<h:outputText value="#{msgs.shareTablePersonnel}:" />
 			<h:inputText id="personnel" value="#{agrShareTablePB.personnel}" label="#{msgs.shareTablePersonnel}" required="true"
 				rendered="#{not cc.attrs.editingDisable}">
-				<f:ajax event="valueChange" execute="@this" render="@form" />
+				<f:ajax event="valueChange" execute="@this" render="agrValuesGrid personnelShares personnalShareInput" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 				<f:convertNumber maxFractionDigits="2" locale="en_us" />
 			</h:inputText>
@@ -82,7 +82,7 @@
 			<h:outputText value="#{msgs.shareTableTrip}:" />
 			<h:inputText id="businessTrip" value="#{agrShareTablePB.businessTrip}" label="#{msgs.shareTableTrip}" required="true"
 				rendered="#{not cc.attrs.editingDisable}">
-				<f:ajax event="valueChange" execute="@this" render="@form" />
+				<f:ajax event="valueChange" execute="@this" render="agrValuesGrid" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 				<f:convertNumber maxFractionDigits="2" locale="en_us" />
 			</h:inputText>
@@ -100,7 +100,7 @@
 			<h:outputText value="#{msgs.shareTableConsMaterials}:" />
 			<h:inputText id="consumerMaterials" value="#{agrShareTablePB.consumerMaterials}" label="#{msgs.shareTableConsMaterials}" required="true"
 				rendered="#{not cc.attrs.editingDisable}">
-				<f:ajax event="valueChange" execute="@this" render="@form" />
+				<f:ajax event="valueChange" execute="@this" render="agrValuesGrid" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 				<f:convertNumber maxFractionDigits="2" locale="en_us" />
 			</h:inputText>
@@ -118,7 +118,7 @@
 			<h:outputText value="#{msgs.shareTableInvMaterials}:" />
 			<h:inputText id="inventoryMaterials" value="#{agrShareTablePB.inventoryMaterials}" label="#{msgs.shareTableInvMaterials}" required="true"
 				rendered="#{not cc.attrs.editingDisable}">
-				<f:ajax event="valueChange" execute="@this" render="@form" />
+				<f:ajax event="valueChange" execute="@this" render="agrValuesGrid" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 				<f:convertNumber maxFractionDigits="2" locale="en_us" />
 			</h:inputText>
@@ -136,7 +136,7 @@
 			<h:outputText value="#{msgs.shareTableRentals}:" />
 			<h:inputText id="rentals" value="#{agrShareTablePB.rentals}" label="#{msgs.shareTableRentals}" required="true"
 				rendered="#{not cc.attrs.editingDisable}">
-				<f:ajax event="valueChange" execute="@this" render="@form" />
+				<f:ajax event="valueChange" execute="@this" render="agrValuesGrid" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 				<f:convertNumber maxFractionDigits="2" locale="en_us" />
 			</h:inputText>
@@ -154,7 +154,7 @@
 			<h:outputText value="#{msgs.shareTableContrPersonnel}:" />
 			<h:inputText id="personnelOnContract" value="#{agrShareTablePB.personnelOnContract}" label="#{msgs.shareTableContrPersonnel}" required="true"
 				rendered="#{not cc.attrs.editingDisable}">
-				<f:ajax event="valueChange" execute="@this" render="@form" />
+				<f:ajax event="valueChange" execute="@this" render="agrValuesGrid" />
 				<f:validateDoubleRange minimum="0" maximum="100" />
 				<f:convertNumber maxFractionDigits="2" locale="en_us" />
 			</h:inputText>
