--- a/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
@@ -78,7 +78,7 @@
 				</p:column>
 
 				<p:column colspan="3">
-					<h:outputText value="#{agreementManager.agreement.department}" />
+					<h:outputText value="#{agreementManager.agreement.department.name}" />
 				</p:column>
 			</p:row>
 
