--- a/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizShareTable.xhtml
@@ -162,7 +162,7 @@
 				<f:convertNumber maxFractionDigits="2" locale="en_us" />
 			</h:outputText>
 
-			<h:outputText id="percentPersonnelOnContract" value="#{agrShareTablePB.shareTable.getPercentOfGoodsField(agrShareTablePB.shareTable.personnelOnContract)}">
+			<h:outputText id="percentPersonnelOnContract" value="#{agrShareTablePB.getPercentOfGoodsField(agrShareTablePB.shareTable.personnelOnContract)}">
 				<f:convertNumber type="currency" currencySymbol="€" />
 			</h:outputText>
 
